--- a/index.html
+++ b/index.html
@@ -17,13 +17,21 @@
         <h1 style="text-align: center; " ; class="color3"> About Me</h1>
         <br>
         <nav>
+            <style>
+                 nav {
+            background-color: black;
+            display: flex;
+            justify-content: center;
+            margin: 0 auto;
+        }
+            </style>
             <ul>
                 <li class="p-border">
-                    <a class="text-color-red">
+                    <!-- <a class="text-color-red"> -->
                         <a href="https://www.facebook.com/amjadjirawi">Add Me on facebook</a>
                 </li>
                 <li class="p-border">
-                    <a class="text-color-red">
+                    <!-- <a class="text-color-red"> -->
                         <a href="https://twitter.com/amjadjearawy"> Follow Me on Twitter</a>
                 </li>
             </ul>
