--- a/index.html
+++ b/index.html
@@ -55,7 +55,9 @@
 
     </main>
 
-    <script src="js/scripts.js"></script>
+    <!-- <script src="js/scripts.js"></script> -->
+    <script src="js/scripts2.js"></script>
+
     <footer>
         <button type="submit">
             <i class="fa fa-envelope" aria-hidden=”true”></i>
